# deckster

./: README.md  pyproject.toml
deckster/: config.py  data_utils.py  error_utils.py  main.py  ppt_utils.py  tables.py
deckster/src/deckster/: __init__.py  config.py  data_utils.py  ppt_utils.py
